--- a/services/verification/package.json
+++ b/services/verification/package.json
@@ -29,8 +29,10 @@
   },
   "dependencies": {
     "@ethereum-sourcify/core": "*",
+    "@types/pg": "^8.6.0",
     "bunyan": "^1.8.14",
     "node-fetch": "^2.6.1",
+    "pg": "^8.6.0",
     "solc": "^0.7.4",
     "web3": "^1.3.0"
   }
